--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.10.2",
+    "connect-mongo": "^0.7.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs-mate": "^2.1.0",
     "express": "~4.11.1",
+    "express-session": "^1.10.3",
+    "mongodb": "^1.4.32",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   }
